# knanpsack_problem

./: Cargo.toml  Dockerfile.amd64  Dockerfile.arm64  run-gh-act.sh  sample_clocks.json
.github/workflows/: rust.yml
src/: lib.rs  main.rs  problem.rs
src/client/: cli.rs
