[package]
name = "knapsack_problem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
derive-new = "0.6.0"
proc-macro2 = "1.0.69"
rust_decimal = "1.34"
rust_decimal_macros = "1.34"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"

[dev-dependencies]
clippy = "0.0.302"
expectest = "0.12.0"
rstest = "0.18.2"
rustfmt = "0.10.0"
